gen/HqlParser.py
# Generated from /Users/fmyblack/pythonproject/hql_grapher/grammer/Hql.g4 by ANTLR 4.7
# encoding: utf-8
from __future__ import print_function
from antlr4 import *
from io import StringIO
import sys



class HqlParser ( Parser ):

    grammarFileName = "Hql.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ u"<INVALID>", u"'('", u"')'", u"','", u"'-'" ]

    symbolicNames = [ u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"SELECT", u"FROM", u"WHERE", u"AND", 
                      u"OR", u"GROUP", u"BY", u"AS", u"IS", u"NOT", u"NULL", 
                      u"IF", u"LEFT", u"FULL", u"OUTER", u"JOIN", u"ON", 
                      u"FIELD", u"NUMBERS", u"STRING", u"CHARS", u"CMP", 
                      u"WS" ]

    RULE_sql = 0
    RULE_single_sql = 1
    RULE_where_stat = 2
    RULE_group_stat = 3
    RULE_join_stat = 4
    RULE_cmp_stat = 5
    RULE_select_stat = 6
    RULE_fuction_stat = 7
    RULE_if_stat = 8
    RULE_minus_stat = 9
    RULE_value_stat = 10

    ruleNames =  [ u"sql", u"single_sql", u"where_stat", u"group_stat", 
                   u"join_stat", u"cmp_stat", u"select_stat", u"fuction_stat", 
                   u"if_stat", u"minus_stat", u"value_stat" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    SELECT=5
    FROM=6
    WHERE=7
    AND=8
    OR=9
    GROUP=10
    BY=11
    AS=12
    IS=13
    NOT=14
    NULL=15
    IF=16
    LEFT=17
    FULL=18
    OUTER=19
    JOIN=20
    ON=21
    FIELD=22
    NUMBERS=23
    STRING=24
    CHARS=25
    CMP=26
    WS=27

    def __init__(self, input, output=sys.stdout):
        super(HqlParser, self).__init__(input, output=output)
        self.checkVersion("4.7")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class SqlContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(HqlParser.SqlContext, self).__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return HqlParser.RULE_sql

     
        def copyFrom(self, ctx):
            super(HqlParser.SqlContext, self).copyFrom(ctx)



    class Join_sqlContext(SqlContext):

        def __init__(self, parser, ctx): # actually a HqlParser.SqlContext)
            super(HqlParser.Join_sqlContext, self).__init__(parser)
            self.copyFrom(ctx)

        def SELECT(self):
            return self.getToken(HqlParser.SELECT, 0)
        def select_stat(self):
            return self.getTypedRuleContext(HqlParser.Select_statContext,0)

        def FROM(self):
            return self.getToken(HqlParser.FROM, 0)
        def sql(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(HqlParser.SqlContext)
            else:
                return self.getTypedRuleContext(HqlParser.SqlContext,i)

        def FIELD(self, i=None):
            if i is None:
                return self.getTokens(HqlParser.FIELD)
            else:
                return self.getToken(HqlParser.FIELD, i)
        def join_stat(self):
            return self.getTypedRuleContext(HqlParser.Join_statContext,0)

        def ON(self):
            return self.getToken(HqlParser.ON, 0)
        def cmp_stat(self):
            return self.getTypedRuleContext(HqlParser.Cmp_statContext,0)

        def group_stat(self):
            return self.getTypedRuleContext(HqlParser.Group_statContext,0)


        def accept(self, visitor):
            if hasattr(visitor, "visitJoin_sql"):
                return visitor.visitJoin_sql(self)
            else:
                return visitor.visitChildren(self)


    class Derect_sqlContext(SqlContext):

        def __init__(self, parser, ctx): # actually a HqlParser.SqlContext)
            super(HqlParser.Derect_sqlContext, self).__init__(parser)
            self.copyFrom(ctx)

        def single_sql(self):
            return self.getTypedRuleContext(HqlParser.Single_sqlContext,0)


        def accept(self, visitor):
            if hasattr(visitor, "visitDerect_sql"):
                return visitor.visitDerect_sql(self)
            else:
                return visitor.visitChildren(self)



    def sql(self):

        localctx = HqlParser.SqlContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_sql)
        self._la = 0 # Token type
        try:
            self.state = 44
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                localctx = HqlParser.Join_sqlContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 22
                self.match(HqlParser.SELECT)
                self.state = 23
                self.select_stat()
                self.state = 24
                self.match(HqlParser.FROM)
                self.state = 25
                self.match(HqlParser.T__0)
                self.state = 26
                self.sql()
                self.state = 27
                self.match(HqlParser.T__1)
                self.state = 28
                self.match(HqlParser.FIELD)
                self.state = 29
                self.join_stat()
                self.state = 31
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==HqlParser.T__0:
                    self.state = 30
                    self.match(HqlParser.T__0)


                self.state = 33
                self.sql()
                self.state = 35
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==HqlParser.T__1:
                    self.state = 34
                    self.match(HqlParser.T__1)


                self.state = 37
                self.match(HqlParser.FIELD)
                self.state = 38
                self.match(HqlParser.ON)
                self.state = 39
                self.cmp_stat(0)
                self.state = 41
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==HqlParser.GROUP:
                    self.state = 40
                    self.group_stat()


                pass

            elif la_ == 2:
                localctx = HqlParser.Derect_sqlContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 43
                self.single_sql()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Single_sqlContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(HqlParser.Single_sqlContext, self).__init__(parent, invokingState)
            self.parser = parser

        def SELECT(self):
            return self.getToken(HqlParser.SELECT, 0)

        def select_stat(self):
            return self.getTypedRuleContext(HqlParser.Select_statContext,0)


        def FROM(self):
            return self.getToken(HqlParser.FROM, 0)

        def FIELD(self):
            return self.getToken(HqlParser.FIELD, 0)

        def where_stat(self):
            return self.getTypedRuleContext(HqlParser.Where_statContext,0)


        def group_stat(self):
            return self.getTypedRuleContext(HqlParser.Group_statContext,0)


        def getRuleIndex(self):
            return HqlParser.RULE_single_sql

        def accept(self, visitor):
            if hasattr(visitor, "visitSingle_sql"):
                return visitor.visitSingle_sql(self)
            else:
                return visitor.visitChildren(self)




    def single_sql(self):

        localctx = HqlParser.Single_sqlContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_single_sql)
        self._la = 0 # Token type
        try:
            self.state = 57
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [HqlParser.SELECT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 46
                self.match(HqlParser.SELECT)
                self.state = 47
                self.select_stat()
                self.state = 48
                self.match(HqlParser.FROM)
                self.state = 49
                self.match(HqlParser.FIELD)
                self.state = 51
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==HqlParser.WHERE:
                    self.state = 50
                    self.where_stat()


                self.state = 54
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==HqlParser.GROUP:
                    self.state = 53
                    self.group_stat()


                pass
            elif token in [HqlParser.FIELD]:
                self.enterOuterAlt(localctx, 2)
                self.state = 56
                self.match(HqlParser.FIELD)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Where_statContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(HqlParser.Where_statContext, self).__init__(parent, invokingState)
            self.parser = parser

        def WHERE(self):
            return self.getToken(HqlParser.WHERE, 0)

        def cmp_stat(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(HqlParser.Cmp_statContext)
            else:
                return self.getTypedRuleContext(HqlParser.Cmp_statContext,i)


        def AND(self, i=None):
            if i is None:
                return self.getTokens(HqlParser.AND)
            else:
                return self.getToken(HqlParser.AND, i)

        def OR(self, i=None):
            if i is None:
                return self.getTokens(HqlParser.OR)
            else:
                return self.getToken(HqlParser.OR, i)

        def getRuleIndex(self):
            return HqlParser.RULE_where_stat

        def accept(self, visitor):
            if hasattr(visitor, "visitWhere_stat"):
                return visitor.visitWhere_stat(self)
            else:
                return visitor.visitChildren(self)




    def where_stat(self):

        localctx = HqlParser.Where_statContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_where_stat)
        self._la = 0 # Token type
        try:
            self.state = 77
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 59
                self.match(HqlParser.WHERE)
                self.state = 60
                self.cmp_stat(0)
                self.state = 65
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==HqlParser.AND:
                    self.state = 61
                    self.match(HqlParser.AND)
                    self.state = 62
                    self.cmp_stat(0)
                    self.state = 67
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 68
                self.match(HqlParser.WHERE)
                self.state = 69
                self.cmp_stat(0)
                self.state = 74
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==HqlParser.OR:
                    self.state = 70
                    self.match(HqlParser.OR)
                    self.state = 71
                    self.cmp_stat(0)
                    self.state = 76
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Group_statContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(HqlParser.Group_statContext, self).__init__(parent, invokingState)
            self.parser = parser

        def GROUP(self):
            return self.getToken(HqlParser.GROUP, 0)

        def BY(self):
            return self.getToken(HqlParser.BY, 0)

        def FIELD(self, i=None):
            if i is None:
                return self.getTokens(HqlParser.FIELD)
            else:
                return self.getToken(HqlParser.FIELD, i)

        def getRuleIndex(self):
            return HqlParser.RULE_group_stat

        def accept(self, visitor):
            if hasattr(visitor, "visitGroup_stat"):
                return visitor.visitGroup_stat(self)
            else:
                return visitor.visitChildren(self)




    def group_stat(self):

        localctx = HqlParser.Group_statContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_group_stat)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self.match(HqlParser.GROUP)
            self.state = 80
            self.match(HqlParser.BY)
            self.state = 81
            self.match(HqlParser.FIELD)
            self.state = 86
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==HqlParser.T__2:
                self.state = 82
                self.match(HqlParser.T__2)
                self.state = 83
                self.match(HqlParser.FIELD)
                self.state = 88
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Join_statContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(HqlParser.Join_statContext, self).__init__(parent, invokingState)
            self.parser = parser

        def LEFT(self):
            return self.getToken(HqlParser.LEFT, 0)

        def OUTER(self):
            return self.getToken(HqlParser.OUTER, 0)

        def JOIN(self):
            return self.getToken(HqlParser.JOIN, 0)

        def FULL(self):
            return self.getToken(HqlParser.FULL, 0)

        def getRuleIndex(self):
            return HqlParser.RULE_join_stat

        def accept(self, visitor):
            if hasattr(visitor, "visitJoin_stat"):
                return visitor.visitJoin_stat(self)
            else:
                return visitor.visitChildren(self)




    def join_stat(self):

        localctx = HqlParser.Join_statContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_join_stat)
        try:
            self.state = 96
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [HqlParser.LEFT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 89
                self.match(HqlParser.LEFT)
                self.state = 90
                self.match(HqlParser.OUTER)
                self.state = 91
                self.match(HqlParser.JOIN)
                pass
            elif token in [HqlParser.FULL]:
                self.enterOuterAlt(localctx, 2)
                self.state = 92
                self.match(HqlParser.FULL)
                self.state = 93
                self.match(HqlParser.OUTER)
                self.state = 94
                self.match(HqlParser.JOIN)
                pass
            elif token in [HqlParser.JOIN]:
                self.enterOuterAlt(localctx, 3)
                self.state = 95
                self.match(HqlParser.JOIN)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Cmp_statContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(HqlParser.Cmp_statContext, self).__init__(parent, invokingState)
            self.parser = parser

        def fuction_stat(self):
            return self.getTypedRuleContext(HqlParser.Fuction_statContext,0)


        def CMP(self):
            return self.getToken(HqlParser.CMP, 0)

        def value_stat(self):
            return self.getTypedRuleContext(HqlParser.Value_statContext,0)


        def IS(self):
            return self.getToken(HqlParser.IS, 0)

        def NOT(self):
            return self.getToken(HqlParser.NOT, 0)

        def NULL(self):
            return self.getToken(HqlParser.NULL, 0)

        def cmp_stat(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(HqlParser.Cmp_statContext)
            else:
                return self.getTypedRuleContext(HqlParser.Cmp_statContext,i)


        def AND(self, i=None):
            if i is None:
                return self.getTokens(HqlParser.AND)
            else:
                return self.getToken(HqlParser.AND, i)

        def getRuleIndex(self):
            return HqlParser.RULE_cmp_stat

        def accept(self, visitor):
            if hasattr(visitor, "visitCmp_stat"):
                return visitor.visitCmp_stat(self)
            else:
                return visitor.visitChildren(self)



    def cmp_stat(self, _p=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = HqlParser.Cmp_statContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 10
        self.enterRecursionRule(localctx, 10, self.RULE_cmp_stat, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.state = 99
                self.fuction_stat()
                self.state = 100
                self.match(HqlParser.CMP)
                self.state = 101
                self.value_stat()
                pass

            elif la_ == 2:
                self.state = 103
                self.fuction_stat()
                self.state = 104
                self.match(HqlParser.IS)
                self.state = 105
                self.match(HqlParser.NOT)
                self.state = 106
                self.match(HqlParser.NULL)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 119
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,14,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = HqlParser.Cmp_statContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_cmp_stat)
                    self.state = 110
                    if not self.precpred(self._ctx, 1):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                    self.state = 113 
                    self._errHandler.sync(self)
                    _alt = 1
                    while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                        if _alt == 1:
                            self.state = 111
                            self.match(HqlParser.AND)
                            self.state = 112
                            self.cmp_stat(0)

                        else:
                            raise NoViableAltException(self)
                        self.state = 115 
                        self._errHandler.sync(self)
                        _alt = self._interp.adaptivePredict(self._input,13,self._ctx)
             
                self.state = 121
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,14,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class Select_statContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(HqlParser.Select_statContext, self).__init__(parent, invokingState)
            self.parser = parser

        def fuction_stat(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(HqlParser.Fuction_statContext)
            else:
                return self.getTypedRuleContext(HqlParser.Fuction_statContext,i)


        def AS(self, i=None):
            if i is None:
                return self.getTokens(HqlParser.AS)
            else:
                return self.getToken(HqlParser.AS, i)

        def FIELD(self, i=None):
            if i is None:
                return self.getTokens(HqlParser.FIELD)
            else:
                return self.getToken(HqlParser.FIELD, i)

        def getRuleIndex(self):
            return HqlParser.RULE_select_stat

        def accept(self, visitor):
            if hasattr(visitor, "visitSelect_stat"):
                return visitor.visitSelect_stat(self)
            else:
                return visitor.visitChildren(self)




    def select_stat(self):

        localctx = HqlParser.Select_statContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_select_stat)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.fuction_stat()
            self.state = 125
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==HqlParser.AS:
                self.state = 123
                self.match(HqlParser.AS)
                self.state = 124
                self.match(HqlParser.FIELD)


            self.state = 135
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==HqlParser.T__2:
                self.state = 127
                self.match(HqlParser.T__2)
                self.state = 128
                self.fuction_stat()
                self.state = 131
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==HqlParser.AS:
                    self.state = 129
                    self.match(HqlParser.AS)
                    self.state = 130
                    self.match(HqlParser.FIELD)


                self.state = 137
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Fuction_statContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(HqlParser.Fuction_statContext, self).__init__(parent, invokingState)
            self.parser = parser

        def FIELD(self):
            return self.getToken(HqlParser.FIELD, 0)

        def fuction_stat(self):
            return self.getTypedRuleContext(HqlParser.Fuction_statContext,0)


        def value_stat(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(HqlParser.Value_statContext)
            else:
                return self.getTypedRuleContext(HqlParser.Value_statContext,i)


        def if_stat(self):
            return self.getTypedRuleContext(HqlParser.If_statContext,0)


        def minus_stat(self):
            return self.getTypedRuleContext(HqlParser.Minus_statContext,0)


        def getRuleIndex(self):
            return HqlParser.RULE_fuction_stat

        def accept(self, visitor):
            if hasattr(visitor, "visitFuction_stat"):
                return visitor.visitFuction_stat(self)
            else:
                return visitor.visitChildren(self)




    def fuction_stat(self):

        localctx = HqlParser.Fuction_statContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_fuction_stat)
        self._la = 0 # Token type
        try:
            self.state = 155
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,19,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 138
                self.match(HqlParser.FIELD)
                self.state = 139
                self.match(HqlParser.T__0)
                self.state = 140
                self.fuction_stat()
                self.state = 145
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==HqlParser.T__2:
                    self.state = 141
                    self.match(HqlParser.T__2)
                    self.state = 142
                    self.value_stat()
                    self.state = 147
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 148
                self.match(HqlParser.T__1)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 150
                self.if_stat()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 151
                self.minus_stat()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 152
                self.match(HqlParser.FIELD)
                self.state = 153
                self.fuction_stat()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 154
                self.value_stat()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class If_statContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(HqlParser.If_statContext, self).__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(HqlParser.IF, 0)

        def cmp_stat(self):
            return self.getTypedRuleContext(HqlParser.Cmp_statContext,0)


        def fuction_stat(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(HqlParser.Fuction_statContext)
            else:
                return self.getTypedRuleContext(HqlParser.Fuction_statContext,i)


        def getRuleIndex(self):
            return HqlParser.RULE_if_stat

        def accept(self, visitor):
            if hasattr(visitor, "visitIf_stat"):
                return visitor.visitIf_stat(self)
            else:
                return visitor.visitChildren(self)




    def if_stat(self):

        localctx = HqlParser.If_statContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_if_stat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 157
            self.match(HqlParser.IF)
            self.state = 158
            self.match(HqlParser.T__0)
            self.state = 159
            self.cmp_stat(0)
            self.state = 160
            self.match(HqlParser.T__2)
            self.state = 161
            self.fuction_stat()
            self.state = 162
            self.match(HqlParser.T__2)
            self.state = 163
            self.fuction_stat()
            self.state = 164
            self.match(HqlParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Minus_statContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(HqlParser.Minus_statContext, self).__init__(parent, invokingState)
            self.parser = parser

        def FIELD(self, i=None):
            if i is None:
                return self.getTokens(HqlParser.FIELD)
            else:
                return self.getToken(HqlParser.FIELD, i)

        def getRuleIndex(self):
            return HqlParser.RULE_minus_stat

        def accept(self, visitor):
            if hasattr(visitor, "visitMinus_stat"):
                return visitor.visitMinus_stat(self)
            else:
                return visitor.visitChildren(self)




    def minus_stat(self):

        localctx = HqlParser.Minus_statContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_minus_stat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 166
            self.match(HqlParser.FIELD)
            self.state = 167
            self.match(HqlParser.T__3)
            self.state = 168
            self.match(HqlParser.FIELD)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Value_statContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(HqlParser.Value_statContext, self).__init__(parent, invokingState)
            self.parser = parser

        def FIELD(self):
            return self.getToken(HqlParser.FIELD, 0)

        def NUMBERS(self):
            return self.getToken(HqlParser.NUMBERS, 0)

        def STRING(self):
            return self.getToken(HqlParser.STRING, 0)

        def NULL(self):
            return self.getToken(HqlParser.NULL, 0)

        def getRuleIndex(self):
            return HqlParser.RULE_value_stat

        def accept(self, visitor):
            if hasattr(visitor, "visitValue_stat"):
                return visitor.visitValue_stat(self)
            else:
                return visitor.visitChildren(self)




    def value_stat(self):

        localctx = HqlParser.Value_statContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_value_stat)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 170
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << HqlParser.NULL) | (1 << HqlParser.FIELD) | (1 << HqlParser.NUMBERS) | (1 << HqlParser.STRING))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx



    def sempred(self, localctx, ruleIndex, predIndex):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[5] = self.cmp_stat_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def cmp_stat_sempred(self, localctx, predIndex):
            if predIndex == 0:
                return self.precpred(self._ctx, 1)
         




